@@ -319,6 +319,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label2">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="margin_left">8</property>
                                             <property name="xalign">0</property>
@@ -336,6 +337,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label9">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="margin_left">8</property>
                                             <property name="xalign">0</property>
@@ -353,6 +355,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label10">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="margin_left">8</property>
                                             <property name="xalign">0</property>
@@ -370,6 +373,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label11">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="margin_left">8</property>
                                             <property name="xalign">0</property>
@@ -387,6 +391,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label12">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="margin_left">8</property>
                                             <property name="xalign">0</property>
@@ -404,6 +409,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label13">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="label" translatable="yes">Lock.</property>
                                           </object>
@@ -417,6 +423,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label14">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="label" translatable="yes">Lock.</property>
                                           </object>
@@ -430,6 +437,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label15">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="label" translatable="yes">Lock.</property>
                                           </object>
@@ -443,6 +451,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label16">
                                             <property name="visible">True</property>
+                                            <property name="sensitive">False</property>
                                             <property name="can_focus">False</property>
                                             <property name="label" translatable="yes">Lock.</property>
                                           </object>
@@ -499,7 +508,6 @@
                   <object class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkTextView" id="pn-notes">
                         <property name="visible">True</property>
