@@ -1,5 +1,7 @@
 2015-04-26 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/ui/ofa-ope-template-properties.ui: improve some UI details.
+
 	* src/core/ofo-ope-template.c: fix load order of operation rows.
 
 2015-04-24 Pierre Wieser <pwieser@trychlos.org>
